--- a/style.css
+++ b/style.css
@@ -1,17 +1,45 @@
+:root{
+    --marlott: rgba(238, 238, 180, 0.5);
+    --hajoide: rgba(77, 213, 236, 0.712);
+    --talalat: rgba(236, 77, 77, 0.712);
+}
+
+body{
+    font-size: larger;
+    color: white;
+    background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fget.wallhere.com%2Fphoto%2F2560x1440-px-ocean-battle-war-World-of-Warships-1338633.jpg&f=1&nofb=1&ipt=6c700f3fc7089fb4499bed0248297f19f5f0dc59ab0590495f0651bc3cfbde98&ipo=images);
+}
+
 table{
     border-collapse: collapse;
+    display: inline-block;
+    margin: 20px;
 }
 td{
     width: 50px;
-    border: solid black 1px;
+    border: solid white 1px;
     margin: 0px;
+    padding: 0px;
 }
 tr{
     height: 50px;
-    border: solid black 1px;
+    border: solid white 1px;
     margin: 0px;
 }
 td:first-child{
     border: none;
 
+}
+
+.bal{
+    float: left;
+}
+
+.marlott{
+    background-color: var(--marlott);
+}
+img{
+    width: 50px;
+    height: 50px;
+    padding: 0px;
 }
