--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@ table{
 }
 td{
     width: 50px;
+    height: 50px;
     border: solid white 1px;
     margin: 0px;
     padding: 0px;
 }
 tr{
-    height: 50px;
     border: solid white 1px;
     margin: 0px;
 }
@@ -39,7 +39,7 @@ td:first-child{
     background-color: var(--marlott);
 }
 img{
-    width: 50px;
-    height: 50px;
-    padding: 0px;
+    width: 100%;
+    height: 100%;
+    display: block;
 }
