--- a/style.css
+++ b/style.css
@@ -10,11 +10,13 @@ body{
     background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fget.wallhere.com%2Fphoto%2F2560x1440-px-ocean-battle-war-World-of-Warships-1338633.jpg&f=1&nofb=1&ipt=6c700f3fc7089fb4499bed0248297f19f5f0dc59ab0590495f0651bc3cfbde98&ipo=images);
 }
 
-table{
-    border-collapse: collapse;
+table {
+    border-collapse: separate;
+    border-spacing: 0;
     display: inline-block;
     margin: 20px;
-}
+    text-align: center;
+  }
 td{
     width: 50px;
     height: 50px;
@@ -26,10 +28,7 @@ tr{
     border: solid white 1px;
     margin: 0px;
 }
-td:first-child{
-    border: none;
 
-}
 
 .bal{
     float: left;
@@ -43,3 +42,20 @@ img{
     height: 100%;
     display: block;
 }
+
+
+td:first-child{
+    border: none;
+}
+
+tr:first-child{
+    border: none;
+}
+
+tr:first-child td {
+  border: none;
+}
+
+/* tr:first-child {
+  border: none;
+} */
