Hajo elöretekintése müködik

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --hajoide: rgba(77, 213, 236, 0.712);
     --talalat: rgba(236, 77, 77, 0.712);
     --forgat: rgba(207, 236, 77, 0.712);
+    --semmi: rgba(0, 0, 0, 0.0);
 }
 
 body{
