--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ td{
     border: solid white 1px;
     margin: 0px;
     padding: 0px;
+    transition: background-color 0.5s ease;
 }
 tr{
     border: solid white 1px;
