--- a/style.css
+++ b/style.css
@@ -32,18 +32,13 @@ td{
     border: solid white 1px;
     margin: 0px;
     padding: 0px;
-    transition: background-color 0.5s ease;
-    transition: border-color 0.5s ease;
+    transition: background-color 0.5s ease, border-color 0.5s ease;
 }
 tr{
     border: solid white 1px;
     margin: 0px;
 }
 
-
-.bal{
-    float: left;
-}
 
 .marlott{
     background-color: var(--marlott);
@@ -114,6 +109,4 @@ h1{
     color: #fff;
   }
 
-/* tr:first-child {
-  border: none;
-} */
+
